--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-/* -------  General Styles ------- */
+/* ------- General Styles ------- */
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 h2 {
@@ -30,11 +30,11 @@ section.alternate-background {
   color: #fff;
 }
 
-main img {
-  width: 100px;
+img {
+  width: 100%;
 }
 
-/* ---  Groups & Items --- */
+/* --- Groups & Items --- */
 
 .group {
   display: flex;
@@ -50,18 +50,26 @@ main img {
   flex: 2;
 }
 
-/* -------  Navigation ------- */
+/* ------- Navigation ------- */
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
+  padding: 20px 20px 10px 20px;
   text-align: center;
 }
 
 .logo {
-  font-family: "Pangolin", cursive;
+  font-family: 'Pangolin', cursive;
   font-size: 72px;
   color: #fff;
+}
+
+header nav ul {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 header nav ul li {
@@ -71,7 +79,6 @@ header nav ul li {
 header nav ul li a {
   color: #fff;
   text-decoration: none;
-  padding: 0 20px 0 0;
 }
 
 header nav ul li a:hover {
@@ -79,10 +86,17 @@ header nav ul li a:hover {
   text-decoration: none;
 }
 
-/* -------  Search Form ------- */
+/* ------- Search Form ------- */
 form {
   border: 2px solid #ff385c;
-  padding: 10px;
+  padding: 20px;
+}
+
+form div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
 }
 
 form label {
@@ -91,7 +105,6 @@ form label {
 
 form select,
 form input {
-  margin-bottom: 20px;
   width: 180px;
 }
 
@@ -104,7 +117,18 @@ form button {
   width: 100%;
 }
 
-/* -------  Footer ------- */
+form .select {
+  display: inline-block;
+}
+
+/* ------- About ------- */
+#about img {
+  padding: 20px 0;
+}
+
+/* ------- Ideas ------- */
+
+/* ------- Footer ------- */
 
 footer {
   background-color: #ff385c;
@@ -117,3 +141,97 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+@media all and (min-width: 480px) {
+  /* ------- Header ------- */
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo {
+    font-size: 30px;
+  }
+
+  header nav ul li {
+    padding: 0 8px;
+  }
+
+  /* ------- Stay ------- */
+  #stay form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 0px 10px;
+  }
+
+  #stay label {
+    width: 100%;
+  }
+
+  #stay .select {
+    width: 100%;
+  }
+
+  #stay button {
+    padding: 10px 20px;
+    font-size: 20px;
+  }
+
+  #stay div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 5px;
+  }
+
+  /* ------- About ------- */
+  #about .about-inner-content {
+    text-align: center;
+  }
+
+  #about img {
+    width: 250px;
+    padding: 30px;
+  }
+}
+
+@media all and (min-width: 800px) {
+  /* ------- About ------- */
+  #about {
+    padding: 30px;
+  }
+
+  #about .about-inner-content {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  #about p {
+    width: 50%;
+  }
+
+  #about img {
+    padding: 10px;
+  }
+
+  /* ------- Host ------- */
+  #host {
+    display: flex;
+    align-items: center;
+    border: 1px solid purple;
+  }
+
+  #host .host-group {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  #host img {
+    width: 50%;
+  }
+}
